test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_underscore_as_letter_2.draco
proc a_a() void : a_a := a_a; corp;

proc main() void : a := 0; corp;

