test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_ioerror_as_identifier.draco
int ioerror;
 
proc main() void : a := 1; corp;
